unpackaged/main/default/objects/Engagement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Engagements (Account)</relationshipLabel>
    <relationshipName>Engagements_Account</relationshipName>
    <type>Lookup</type>
</CustomField>