unpackaged/main/default/objects/Engagement__c/fields/Accounting_Meeting_Complete__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Meeting_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Accounting to complete after reviewing</inlineHelpText>
    <label>Accounting Meeting Complete</label>
    <type>Checkbox</type>
</CustomField>