unpackaged/main/default/objects/Engagement__c/fields/Activate_Ne_Flow_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Activate_Ne_Flow_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this to setup new time based flo triggers in PRocess Builder/Workflow</description>
    <label>Activate Ne Flow Trigger</label>
    <type>Checkbox</type>
</CustomField>