unpackaged/main/default/objects/Engagement__c/fields/Actual_Printed_Product_Fees__c.field-meta.xml
<CustomField>
    <fullName>Actual_Printed_Product_Fees__c</fullName>
    <label>Actual Printed Product Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>