unpackaged/main/default/objects/Engagement__c/fields/ARF_Contract_Finalized__c.field-meta.xml
<CustomField>
    <fullName>ARF_Contract_Finalized__c</fullName>
    <description>Addendum Request contract finalized</description>
    <inlineHelpText>Date the Addendum is finalized</inlineHelpText>
    <label>ARF Contract Finalized</label>
    <type>Date</type>
</CustomField>