unpackaged/main/default/objects/Engagement__c/fields/ARF_Notes__c.field-meta.xml
<CustomField>
    <fullName>ARF_Notes__c</fullName>
    <description>Addendum notes</description>
    <label>ARF Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>