unpackaged/main/default/objects/Engagement__c/fields/ARF_Sent_to_Maritz__c.field-meta.xml
<CustomField>
    <fullName>ARF_Sent_to_Maritz__c</fullName>
    <description>Addendum Request Form sent to Martiz</description>
    <inlineHelpText>Date the Addendum request was sent to Maritz</inlineHelpText>
    <label>ARF Sent to Maritz</label>
    <type>Date</type>
</CustomField>