unpackaged/main/default/objects/Engagement__c/fields/Attendees_Participated__c.field-meta.xml
<CustomField>
    <fullName>Attendees_Participated__c</fullName>
    <label>Attendees Participated</label>
    <summaryFilterItems>
        <field>Engagement_Attendee__c.Attendance_Status__c</field>
        <operation>equals</operation>
        <value>Attended</value>
    </summaryFilterItems>
    <summaryForeignKey>Engagement_Attendee__c.Engagement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>