unpackaged/main/default/objects/Engagement__c/fields/Attrition_Amount__c.field-meta.xml
<CustomField>
    <fullName>Attrition_Amount__c</fullName>
    <label>Attrition Clause</label>
    <type>TextArea</type>
</CustomField>