unpackaged/main/default/objects/Engagement__c/fields/Available_Seats__c.field-meta.xml
<CustomField>
    <fullName>Available_Seats__c</fullName>
    <formula>Capacity__c - Current_Registrations__c - On_Hold_Seats__c - Attendees_Participated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>