unpackaged/main/default/objects/Engagement__c/fields/Best_Ideas_submitted_by_moderator__c.field-meta.xml
<CustomField>
    <fullName>Best_Ideas_submitted_by_moderator__c</fullName>
    <label>Best Ideas Submitted by Moderator</label>
    <type>Date</type>
</CustomField>