unpackaged/main/default/objects/Engagement__c/fields/Billing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Billing_Notes__c</fullName>
    <label>Billing Notes</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>