unpackaged/main/default/objects/Engagement__c/fields/Campus_Room__c.field-meta.xml
<CustomField>
    <fullName>Campus_Room__c</fullName>
    <label>Campus Room</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NCM_Campus_Room</valueSetName>
    </valueSet>
</CustomField>