unpackaged/main/default/objects/Engagement__c/fields/Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date__c</fullName>
    <inlineHelpText>Only complete if meeting has a contract</inlineHelpText>
    <label>Hotel Contract Cancelled</label>
    <type>Date</type>
</CustomField>