unpackaged/main/default/objects/Engagement__c/fields/Cancellation_Decision__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Decision__c</fullName>
    <inlineHelpText>Date group informs cancelling meeting</inlineHelpText>
    <label>Cancellation Decision</label>
    <type>Date</type>
</CustomField>