unpackaged/main/default/objects/Engagement__c/fields/Cancellation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Notes__c</fullName>
    <label>Cancellation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>