unpackaged/main/default/objects/Engagement__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Covid-19</fullName>
            </value>
            <value>
                <fullName>Low Attendance</fullName>
            </value>
            <value>
                <fullName>OEM Mtg. Conflict</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>