unpackaged/main/default/objects/Engagement__c/fields/Cancelled_Seats__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Seats__c</fullName>
    <label>Cancelled Seats - Deprecated</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>