unpackaged/main/default/objects/Engagement__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <inlineHelpText>to update the city go to the hotel that is listed in the hotel/Meeting Location field and update the city on the physical address</inlineHelpText>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>