unpackaged/main/default/objects/Engagement__c/fields/Client_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Group_Id__c</fullName>
    <formula>IF( Proprietary_Group__c = null,  X20_Group__r.x20GroupID_18__c , Proprietary_Group__r.Proprietary_Group_18__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Group Id</label>
    <type>Text</type>
</CustomField>