unpackaged/main/default/objects/Engagement__c/fields/Client_Reminder_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Client_Reminder_Email_Sent__c</fullName>
    <description>Reminder of final roster due date, shipping address, and start and end time</description>
    <inlineHelpText>Reminder of final roster due date, shipping address, and start and end time</inlineHelpText>
    <label>Client Reminder Email Sent</label>
    <type>Date</type>
</CustomField>