unpackaged/main/default/objects/Engagement__c/fields/Cohort__c.field-meta.xml
<CustomField>
    <fullName>Cohort__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cohort</label>
    <referenceTo>Cohort__c</referenceTo>
    <relationshipLabel>Engagements</relationshipLabel>
    <relationshipName>Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>