unpackaged/main/default/objects/Engagement__c/fields/Cohort_Id__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Id__c</fullName>
    <formula>Cohort__r.Cohort_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cohort Id</label>
    <type>Text</type>
</CustomField>