unpackaged/main/default/objects/Engagement__c/fields/Confirmed_Hotel__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Hotel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hotel/Meeting Location</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Hotel,NCM Client,NCM Management Group</value>
        </filterItems>
        <filterItems>
            <field>Account.Out_of_Business__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Engagements</relationshipLabel>
    <relationshipName>Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>