unpackaged/main/default/objects/Engagement__c/fields/Confirmed_Hotel_ID__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Hotel_ID__c</fullName>
    <description>TEMPORARY FIELD - will be used to map hotel to database during Intranet migration</description>
    <label>Confirmed Hotel ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>