unpackaged/main/default/objects/Engagement__c/fields/Confirmed_Hotel_TEMP__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Hotel_TEMP__c</fullName>
    <description>This is a TEMPORARY FIELD - will be used to replace the LOOKUP field CONFIRMED HOTEL. When the intranet conversion is complete this field will be deleted and replaced with the CONFIRMED HOTEL</description>
    <inlineHelpText>-- DEPRECATED -- This is a TEMPORARY FIELD - will be used to replace the LOOKUP field CONFIRMED HOTEL. When the intranet conversion is complete this field will be deleted and replaced with the CONFIRMED HOTEL</inlineHelpText>
    <label>Confirmed Hotel (DO NOT USE)</label>
    <length>70</length>
    <type>Text</type>
</CustomField>