unpackaged/main/default/objects/Engagement__c/fields/Contract_Connected_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Contract_Connected_Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Connected Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Engagements</relationshipLabel>
    <relationshipName>Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>