unpackaged/main/default/objects/Engagement__c/fields/Contracted_by_NCM__c.field-meta.xml
<CustomField>
    <fullName>Contracted_by_NCM__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>NCM has contracted the location internally and has not used Maritz.</inlineHelpText>
    <label>Contracted by NCM</label>
    <type>Checkbox</type>
</CustomField>