unpackaged/main/default/objects/Engagement__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country(old)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>