unpackaged/main/default/objects/Engagement__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Engagements</relationshipLabel>
    <relationshipName>Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>