unpackaged/main/default/objects/Engagement__c/fields/CRF_Required__c.field-meta.xml
<CustomField>
    <fullName>CRF_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CRF Required?</label>
    <type>Checkbox</type>
</CustomField>