unpackaged/main/default/objects/Engagement__c/fields/CRF_Sent_to_Maritz__c.field-meta.xml
<CustomField>
    <fullName>CRF_Sent_to_Maritz__c</fullName>
    <label>CRF Sent to Maritz</label>
    <type>Date</type>
</CustomField>