unpackaged/main/default/objects/Engagement__c/fields/Current_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Current_Cycle__c</fullName>
    <formula>VALUE(RIGHT(TEXT(Year( TODAY() )), 2)) +(CEILING(MONTH( TODAY() )/4)/10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Cycle</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>