unpackaged/main/default/objects/Engagement__c/fields/Current_Fiscal_Revenue_Code__c.field-meta.xml
<CustomField>
    <fullName>Current_Fiscal_Revenue_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if Session Start Date is in current year - used for Roll Up Summary on Course</description>
    <label>Current Fiscal Revenue (Code)</label>
    <type>Checkbox</type>
</CustomField>