unpackaged/main/default/objects/Engagement__c/fields/Current_Registrations__c.field-meta.xml
<CustomField>
    <fullName>Current_Registrations__c</fullName>
    <label>Current Registrations</label>
    <summaryFilterItems>
        <field>Engagement_Attendee__c.Attendance_Status__c</field>
        <operation>equals</operation>
        <value>Registration Confirmed</value>
    </summaryFilterItems>
    <summaryForeignKey>Engagement_Attendee__c.Engagement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>