unpackaged/main/default/objects/Engagement__c/fields/Date_Last_Verified__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Verified__c</fullName>
    <inlineHelpText>Last Date data was loaded from Intranet</inlineHelpText>
    <label>Date Last Verified</label>
    <type>Date</type>
</CustomField>