unpackaged/main/default/objects/Engagement__c/fields/Days_Since_End_Date_Code__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_End_Date_Code__c</fullName>
    <description>Used for Days Since End Date calculations</description>
    <formula>today() - Engagement_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since End Date (Code)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>