unpackaged/main/default/objects/Engagement__c/fields/Descriptor__c.field-meta.xml
<CustomField>
    <fullName>Descriptor__c</fullName>
    <inlineHelpText>This is a abbreviated description of the Engagement</inlineHelpText>
    <label>Descriptor</label>
    <length>40</length>
    <type>Text</type>
</CustomField>