unpackaged/main/default/objects/Engagement__c/fields/Dimension_4__c.field-meta.xml
<CustomField>
    <fullName>Dimension_4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dimension 4</label>
    <referenceTo>c2g__codaDimension4__c</referenceTo>
    <relationshipLabel>Engagements</relationshipLabel>
    <relationshipName>Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>