unpackaged/main/default/objects/Engagement__c/fields/Due_Dates_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Due_Dates_Email_Sent__c</fullName>
    <description>Remind instructor of upcoming due dates</description>
    <inlineHelpText>Remind instructor of upcoming due dates</inlineHelpText>
    <label>Due Dates Email Sent</label>
    <type>Date</type>
</CustomField>