unpackaged/main/default/objects/Engagement__c/fields/Engagement_Cancellation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Cancellation_Notes__c</fullName>
    <label>Engagement Cancellation Notes</label>
    <type>TextArea</type>
</CustomField>