unpackaged/main/default/objects/Engagement__c/fields/Engagement_Cancelled_Date__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Cancelled_Date__c</fullName>
    <inlineHelpText>Date Maritz notifies meeting cancelled</inlineHelpText>
    <label>Engagement Cancelled Date</label>
    <type>Date</type>
</CustomField>