unpackaged/main/default/objects/Engagement__c/fields/Engagement_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement Coordinator</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>NCM Associates</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Engagements (Coordinator)</relationshipLabel>
    <relationshipName>Engagements_Coordinator</relationshipName>
    <type>Lookup</type>
</CustomField>