unpackaged/main/default/objects/Engagement__c/fields/Engagement_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Cycle__c</fullName>
    <label>Engagement Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&quot;1/1&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;1/2&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;2/2&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;1/3&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;2/3&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;3/3&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>