unpackaged/main/default/objects/Engagement__c/fields/Engagement_Cycle_Old__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Cycle_Old__c</fullName>
    <formula>VALUE( 
    RIGHT( 
        TEXT( 
            YEAR( 
                DATEVALUE( Engagement_End__c ) 
            ) 
        ), 
        2 
    ) 
) + 
(
    CEILING(
        MONTH( 
            DATEVALUE( Engagement_End__c ) 
        )/4
    )/10
)</formula>
    <label>Engagement Cycle Old</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>