unpackaged/main/default/objects/Engagement__c/fields/Engagement_Description__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Description__c</fullName>
    <label>Engagement Description</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Engagement_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Variable Operations</fullName>
            </value>
            <value>
                <fullName>Fixed Operations</fullName>
            </value>
            <value>
                <fullName>Service Advisor</fullName>
            </value>
            <value>
                <fullName>F&amp;I Department</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Regular Cycle Mtg.</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Controller</fullName>
            </value>
            <value>
                <fullName>Agenda</fullName>
            </value>
            <value>
                <fullName>Candidate</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>