unpackaged/main/default/objects/Engagement__c/fields/Engagement_End__c.field-meta.xml
<CustomField>
    <fullName>Engagement_End__c</fullName>
    <label>Engagement End</label>
    <type>DateTime</type>
</CustomField>