unpackaged/main/default/objects/Engagement__c/fields/Engagement_Notes__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Notes__c</fullName>
    <label>Engagement Notes - Deprecated</label>
    <type>TextArea</type>
</CustomField>