unpackaged/main/default/objects/Engagement__c/fields/Engagement_Notes_NEW__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Notes_NEW__c</fullName>
    <label>Engagement Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>