unpackaged/main/default/objects/Engagement__c/fields/Engagement_Number__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Number__c</fullName>
    <description>Previously named Intranet Engagement #. Intranet is no longer being used, so the field label was changed.</description>
    <displayFormat>{0}</displayFormat>
    <label>Engagement Number</label>
    <type>AutoNumber</type>
</CustomField>