unpackaged/main/default/objects/Engagement__c/fields/Engagement_Start__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Start__c</fullName>
    <label>Engagement Start</label>
    <type>DateTime</type>
</CustomField>