unpackaged/main/default/objects/Engagement__c/fields/Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Type__c</fullName>
    <label>Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20 Group</fullName>
            </value>
            <value>
                <fullName>Executive Coaching</fullName>
            </value>
            <value>
                <fullName>Group Review</fullName>
            </value>
            <value>
                <fullName>Managerial Coaching</fullName>
            </value>
            <value>
                <fullName>Special Meeting (20 Group)</fullName>
            </value>
            <value>
                <fullName>Special Meeting (Dealer)</fullName>
            </value>
            <value>
                <fullName>Special Meeting (Dealer Group)</fullName>
            </value>
            <value>
                <fullName>Special Meeting (Dealer – OEM Program)</fullName>
                <label>Special Meeting (Dealer - OEM Program)</label>
            </value>
            <value>
                <fullName>Special Meeting (Virtual SubGroup)</fullName>
            </value>
            <value>
                <fullName>Star Consulting</fullName>
            </value>
            <value>
                <fullName>Candidate Call</fullName>
            </value>
            <value>
                <fullName>NCMi</fullName>
                <isActive>false</isActive>
                <label>NCMi</label>
            </value>
            <value>
                <fullName>Professional Services</fullName>
                <isActive>false</isActive>
                <label>Professional Services - 20 Group Training</label>
            </value>
            <value>
                <fullName>Special</fullName>
                <isActive>false</isActive>
                <label>Special</label>
            </value>
            <value>
                <fullName>Standard</fullName>
                <isActive>false</isActive>
                <label>Standard</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>