unpackaged/main/default/objects/Engagement__c/fields/Engagements_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Engagements_Checklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagements Checklist</label>
    <referenceTo>Engagements_Checklist__c</referenceTo>
    <relationshipLabel>Engagements</relationshipLabel>
    <relationshipName>Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>