unpackaged/main/default/objects/Engagement__c/fields/EngagementsChecklistID_18__c.field-meta.xml
<CustomField>
    <fullName>EngagementsChecklistID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EngagementID (18)</label>
    <type>Text</type>
</CustomField>