unpackaged/main/default/objects/Engagement__c/fields/Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Status__c</fullName>
    <formula>IF(  Datevalue(Engagement_End__c + 1)  &lt; Today(),&quot;CLOSED&quot; , &quot;OPEN&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrollment Status</label>
    <type>Text</type>
</CustomField>