unpackaged/main/default/objects/Engagement__c/fields/Estimated_Workbook_Print_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Workbook_Print_Date__c</fullName>
    <label>Estimated Workbook Print Date</label>
    <type>Date</type>
</CustomField>