unpackaged/main/default/objects/Engagement__c/fields/Expense_Total__c.field-meta.xml
<CustomField>
    <fullName>Expense_Total__c</fullName>
    <label>Expense Total</label>
    <summarizedField>Engagement_Expense__c.Amount__c</summarizedField>
    <summaryForeignKey>Engagement_Expense__c.Engagement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>