unpackaged/main/default/objects/Engagement__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>An external id for this record that can be referenced outside of Salesforce.</description>
    <displayFormat>{0000000000}</displayFormat>
    <externalId>true</externalId>
    <label>ExternalId</label>
    <type>AutoNumber</type>
</CustomField>