unpackaged/main/default/objects/Engagement__c/fields/Forecasted_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Revenue__c</fullName>
    <description>Old Data Type field created new formula field</description>
    <label>Forecasted Revenue Old</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>