unpackaged/main/default/objects/Engagement__c/fields/Forecasted_Revenue_Formula__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Revenue_Formula__c</fullName>
    <formula>Moderator_Fees__c + Printed_Product_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecasted Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>