unpackaged/main/default/objects/Engagement__c/fields/GOA_s_Submitted__c.field-meta.xml
<CustomField>
    <fullName>GOA_s_Submitted__c</fullName>
    <label>GOA&#39;s Submitted</label>
    <type>TextArea</type>
</CustomField>