unpackaged/main/default/objects/Engagement__c/fields/Group_Initials__c.field-meta.xml
<CustomField>
    <fullName>Group_Initials__c</fullName>
    <formula>X20_Group__r.Group_Initials__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Initials</label>
    <type>Text</type>
</CustomField>