unpackaged/main/default/objects/Engagement__c/fields/Group_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Group_Meeting__c</fullName>
    <label>Group Meeting #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>