unpackaged/main/default/objects/Engagement__c/fields/Group_Member_Number__c.field-meta.xml
<CustomField>
    <fullName>Group_Member_Number__c</fullName>
    <label>Group Member Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>