unpackaged/main/default/objects/Engagement__c/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <formula>X20_Group__r.Group_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Name</label>
    <type>Text</type>
</CustomField>